// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChartHistogram /> should render properly 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: -8px;
}

.emotion-3:hover button svg {
  opacity: 1;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-right: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  padding: 6px;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-5:hover svg,
.emotion-5.focus-visible:focus svg {
  opacity: 1;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

.emotion-5 svg {
  opacity: 0;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-6 {
  width: 2px;
}

.emotion-8 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  height: 100%;
}

.emotion-9 .Loading {
  min-height: auto;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-11 {
  text-transform: uppercase;
  font-family: Roboto Condensed;
  color: #b3b3b3;
  padding-bottom: 32px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-bottom: 8px;
}

.emotion-14 {
  width: 10%;
  height: 100%;
  background-color: #73b61c;
}

.emotion-14:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-14:hover {
  background-color: #96c955;
}

.emotion-15 {
  width: 10%;
  height: 64%;
  background-color: #73b61c;
}

.emotion-15:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-15:hover {
  background-color: #96c955;
}

.emotion-16 {
  width: 10%;
  height: 47%;
  background-color: #73b61c;
}

.emotion-16:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-16:hover {
  background-color: #96c955;
}

.emotion-17 {
  width: 10%;
  height: 37%;
  background-color: #73b61c;
}

.emotion-17:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-17:hover {
  background-color: #96c955;
}

.emotion-18 {
  width: 10%;
  height: 33%;
  background-color: #73b61c;
}

.emotion-18:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-18:hover {
  background-color: #96c955;
}

.emotion-19 {
  width: 10%;
  height: 28%;
  background-color: #73b61c;
}

.emotion-19:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-19:hover {
  background-color: #96c955;
}

.emotion-20 {
  width: 10%;
  height: 27%;
  background-color: #73b61c;
}

.emotion-20:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-20:hover {
  background-color: #96c955;
}

.emotion-21 {
  width: 10%;
  height: 29%;
  background-color: #73b61c;
}

.emotion-21:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-21:hover {
  background-color: #96c955;
}

.emotion-22 {
  width: 10%;
  height: 55%;
  background-color: #73b61c;
}

.emotion-22:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-22:hover {
  background-color: #96c955;
}

.emotion-23 {
  width: 10%;
  height: 4%;
  background-color: #73b61c;
}

.emotion-23:not(:last-of-type) {
  margin-right: 3.3333333333333335%;
}

.emotion-23:hover {
  background-color: #96c955;
}

.emotion-24 {
  height: 1px;
  background-color: #3b3b3b;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
  padding-top: 12px;
}

.emotion-26 {
  font-family: Roboto,Avenir,"sans-serif";
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-28 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-28:hover,
.emotion-28.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-30 {
  padding-right: 8px;
}

.emotion-31 {
  width: 8px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h3
          className="emotion-4"
        >
          analysis.zvi-face-detection
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-6"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <div
            className="emotion-11"
          >
            Label Prediction Confidence
          </div>
          <div
            className="emotion-10"
          >
            <div
              className="emotion-13"
            >
              <div
                className="emotion-14"
                title="93974 (0.15 - 0.24)"
              />
              <div
                className="emotion-15"
                title="59476 (0.24 - 0.34)"
              />
              <div
                className="emotion-16"
                title="43784 (0.34 - 0.43)"
              />
              <div
                className="emotion-17"
                title="34280 (0.43 - 0.53)"
              />
              <div
                className="emotion-18"
                title="30313 (0.53 - 0.62)"
              />
              <div
                className="emotion-19"
                title="26139 (0.62 - 0.72)"
              />
              <div
                className="emotion-20"
                title="25302 (0.72 - 0.81)"
              />
              <div
                className="emotion-21"
                title="26865 (0.81 - 0.91)"
              />
              <div
                className="emotion-22"
                title="51524 (0.91 - 1.00)"
              />
              <div
                className="emotion-23"
                title="3667 (1.00 - 1.09)"
              />
            </div>
            <div
              className="emotion-24"
            />
            <div
              className="emotion-25"
            >
              <span>
                0.15
              </span>
              <span
                className="emotion-26"
              >
                Confidence Score Range
              </span>
              <span>
                1.00
              </span>
            </div>
          </div>
          <div
            className="emotion-27"
          >
            <button
              aria-label="Add Filter"
              className="emotion-28"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-29"
              >
                <svg
                  className="emotion-30"
                  data-file-name="filter.svg"
                  height={20}
                />
                Add Filter
              </div>
            </button>
            <div
              className="emotion-31"
            />
            <button
              aria-label="Add Facet Visualization"
              className="emotion-28"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-29"
              >
                <svg
                  className="emotion-30"
                  data-file-name="facet.svg"
                  height={20}
                />
                Add Facet Visualization
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChartHistogram /> should render properly without an attribute 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 470px;
  padding: 16px;
  padding-left: 0;
  padding-right: 0;
  width: auto;
  padding: 0;
}

.emotion-4 {
  padding-top: 8px;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
}

.emotion-5 {
  height: 24px;
}

.emotion-6 [data-reach-listbox-input][data-state="expanded"] {
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-7 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #808080;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border-radius: 2px;
}

.emotion-9 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 8px;
}

.emotion-10 {
  background-color: transparent;
  border: none;
  padding: 0;
}

.emotion-10:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-11 {
  overflow-y: hidden;
  padding: 8px;
  padding-top: 0;
  margin: -8px;
  margin-bottom: 0;
}

.emotion-12 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  background-color: #808080;
  box-shadow: 0 2px 6px 0 #000000;
}

.emotion-13 {
  padding: 4px;
}

.emotion-14 {
  width: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 12px;
  padding-left: 32px;
  border: 1px solid transparent;
  border-radius: 2px;
  color: #e0e0e0;
  background-repeat: no-repeat,repeat;
  -webkit-background-position: left 8px top 50%;
  background-position: left 8px top 50%;
  -webkit-background-size: 20px;
  background-size: 20px;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-14::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-14::-moz-placeholder {
  font-style: italic;
}

.emotion-14:-ms-input-placeholder {
  font-style: italic;
}

.emotion-14::placeholder {
  font-style: italic;
}

.emotion-14:hover {
  border: 1px solid #808080;
}

.emotion-14:focus {
  outline: 1px solid transparent;
  border: 1px solid #73b61c;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-15 {
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  margin: 0;
  overflow: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-16 {
  list-style: none;
  padding-left: 0;
  padding-bottom: 8px;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-17 {
  padding-bottom: 2px;
}

.emotion-18 {
  padding-left: 8px;
}

.emotion-19 {
  padding: 0;
}

.emotion-20 {
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 24px;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-20:hover {
  background: #b3b3b3;
  cursor: pointer;
}

.emotion-21 {
  height: 16px;
}

.emotion-22 {
  padding-top: 8px;
}

.emotion-23 {
  display: block;
  padding-bottom: 8px;
  color: #b3b3b3;
}

.emotion-24 {
  position: relative;
}

.emotion-25 {
  outline-offset: 0;
  padding: 10px 12px;
  border-radius: 2px;
  box-shadow: inset 0 1px 3px 0 transparent;
  width: 100%;
  cursor: text;
  color: #ffffff;
  background-color: #3b3b3b;
  border: 1px solid transparent;
  border-width: 2px;
}

.emotion-25:focus {
  border: 2px solid #73b61c;
  outline: #73b61c;
  color: #000000;
  background-color: #ffffff;
}

.emotion-25:hover {
  border: 2px solid #ffffff;
}

.emotion-26 {
  padding-top: 8px;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-28 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-28,
.emotion-28:hover,
.emotion-28:visited {
  background-color: #808080;
}

.emotion-28:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #b3b3b3;
}

.emotion-28[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

.emotion-29 {
  width: 8px;
}

.emotion-30 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-30,
.emotion-30:hover,
.emotion-30:visited {
  background-color: #73b61c;
}

.emotion-30:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #96c955;
}

.emotion-30[aria-disabled=true] {
  color: #2e2e2e;
  background-color: #808080;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <form
        action=""
        className="emotion-3"
        method="post"
        onSubmit={[Function]}
      >
        <h2
          className="emotion-4"
        >
          Histogram
           Visualization
        </h2>
        <div
          className="emotion-5"
        />
        <label
          className="emotion-6"
        >
          <div
            className="emotion-7"
          >
            Metadata Type
          </div>
          <ListboxInput
            className="emotion-8"
            defaultValue=""
            onChange={[Function]}
          >
            <ListboxButton
              arrow={
                <Unknown
                  color="#ffffff"
                  height={20}
                />
              }
              className="emotion-9"
            >
              Select Type
            </ListboxButton>
            <ListboxPopover
              className="emotion-10"
            >
              <div
                className="emotion-11"
              >
                <div
                  className="emotion-12"
                >
                  <div
                    className="emotion-13"
                  >
                    <input
                      aria-label="Filter Types"
                      className="emotion-14"
                      onChange={[Function]}
                      placeholder="Filter types"
                      type="search"
                      value=""
                    />
                  </div>
                  <ListboxList
                    className="emotion-15"
                  >
                    <ul
                      aria-labelledby="Analysis"
                      className="emotion-16"
                      role="group"
                    >
                      <li
                        className="emotion-17"
                        role="presentation"
                      >
                        <span
                          className="emotion-18"
                        >
                          Analysis
                        </span>
                        <ul
                          className="emotion-19"
                        >
                          <ListboxOption
                            className="emotion-20"
                            value="analysis.zvi-face-detection"
                          >
                            zvi-face-detection
                          </ListboxOption>
                        </ul>
                      </li>
                    </ul>
                  </ListboxList>
                </div>
              </div>
            </ListboxPopover>
          </ListboxInput>
        </label>
        <div
          className="emotion-21"
        />
        <div
          className="emotion-22"
        >
          <label
            className="emotion-23"
            htmlFor="values"
          >
            Number of Values Shown
          </label>
          <div
            className="emotion-24"
          >
            <input
              className="emotion-25"
              disabled={false}
              id="values"
              name="values"
              onChange={[Function]}
              type="number"
              value="10"
            />
          </div>
          <div
            className="emotion-26"
          >
             
          </div>
        </div>
        <div
          className="emotion-27"
        >
          <button
            className="emotion-28"
            onClick={[Function]}
            type="button"
          >
            Cancel
          </button>
          <div
            className="emotion-29"
          />
          <button
            aria-disabled={true}
            className="emotion-30"
            onClick={[Function]}
            type="submit"
          >
            Save Visualization
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`<ChartHistogram /> should render properly without data 1`] = `
.emotion-0 {
  height: 100%;
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: #252525;
  border-radius: 2px;
  padding: 16px;
  padding-top: 8px;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-bottom: 24px;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: -8px;
}

.emotion-3:hover button svg {
  opacity: 1;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: 17px;
  line-height: 20px;
  font-weight: 500;
  padding-right: 8px;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-5 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  padding: 6px;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-5:hover svg,
.emotion-5.focus-visible:focus svg {
  opacity: 1;
}

.emotion-5[aria-disabled=true] {
  color: #808080;
}

.emotion-5 svg {
  opacity: 0;
}

.emotion-5:hover,
.emotion-5.focus-visible:focus {
  background-color: #3b3b3b;
}

.emotion-6 {
  width: 2px;
}

.emotion-8 {
  height: 0%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  height: 100%;
}

.emotion-9 .Loading {
  min-height: auto;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.emotion-11 {
  text-transform: uppercase;
  font-family: Roboto Condensed;
  color: #b3b3b3;
  padding-bottom: 32px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  padding-bottom: 8px;
}

.emotion-14 {
  height: 1px;
  background-color: #3b3b3b;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  font-family: Roboto Mono;
  padding-top: 12px;
}

.emotion-16 {
  font-family: Roboto,Avenir,"sans-serif";
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-18 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #b3b3b3;
  background-color: #3b3b3b;
  padding-left: 6px;
  padding-right: 6px;
  font-family: Roboto Condensed;
  text-transform: uppercase;
}

.emotion-18:hover,
.emotion-18.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-20 {
  padding-right: 8px;
}

.emotion-21 {
  width: 8px;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <h3
          className="emotion-4"
        >
          analysis.zvi-face-detection
        </h3>
        <button
          aria-label="Edit Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Edit"
          type="button"
        >
          <svg
            data-file-name="pen.svg"
            height={20}
          />
        </button>
        <div
          className="emotion-6"
        />
        <button
          aria-label="Delete Chart"
          className="emotion-5"
          onClick={[Function]}
          title="Delete"
          type="button"
        >
          <svg
            data-file-name="cross.svg"
            height={20}
          />
        </button>
      </div>
    </div>
    <div
      className="emotion-8"
    >
      <div
        className="emotion-9"
      >
        <div
          className="emotion-10"
        >
          <div
            className="emotion-11"
          >
            Label Prediction Confidence
          </div>
          <div
            className="emotion-10"
          >
            <div
              className="emotion-13"
            />
            <div
              className="emotion-14"
            />
            <div
              className="emotion-15"
            >
              <span>
                0.00
              </span>
              <span
                className="emotion-16"
              >
                Confidence Score Range
              </span>
              <span>
                1.00
              </span>
            </div>
          </div>
          <div
            className="emotion-17"
          >
            <button
              aria-label="Add Filter"
              className="emotion-18"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-19"
              >
                <svg
                  className="emotion-20"
                  data-file-name="filter.svg"
                  height={20}
                />
                Add Filter
              </div>
            </button>
            <div
              className="emotion-21"
            />
            <button
              aria-label="Add Facet Visualization"
              className="emotion-18"
              onClick={[Function]}
              type="button"
            >
              <div
                className="emotion-19"
              >
                <svg
                  className="emotion-20"
                  data-file-name="facet.svg"
                  height={20}
                />
                Add Facet Visualization
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
